# one

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .secretsignore  README.md  db_dgt.json  db_quiz.json  db_test.sqlite3  english_lection.aux  manage.py  pyproject.toml  requirements.in  requirements.txt  taxonomy_nodes.json
_sh/: create_app.sh  pip_compile_and_sync.sh
app_template/: apps.py-tpl  models.py-tpl
articles/: models.py
base/: abstracts.py  admin.py  context_processors.py  models.py  site.py  tasks.py  telegram.py  translation.py
base/templatetags/: markdown_extras.py
books/: tasks.py  views.py
books/migrations/: 0001_initial.py  0003_chapter_display.py  0004_book_pdf.py  0007_alter_book_pdf.py  0008_remove_book_sites.py  0009_alter_chapter_options_alter_chapter_unique_together_and_more.py
code/: asgi.py  settings.py  urls.py  wsgi.py
code/app_template/: apps.py-tpl
code/articles/: apps.py
code/base/: apps.py
code/testapp/: apps.py
codebase/: asgi.py  context_processors.py  middleware.py  middlewares.py  settings.py  urls.py
codebase/_templates/: base.html  error.html
codebase/app_template/: apps.py-tpl
codebase/articles/: admin.py  apps.py  factories.py  forms.py  models.py  tasks.py  translation.py  urls.py  views.py
codebase/auths/: apps.py  urls.py
codebase/base/: __init__.py  abstracts.py  admin.py  apps.py  checks.py  context_processors.py  generic_views.py  middleware.py  models.py  request.py  tasks.py  telegram.py  translation.py  urls.py  views.py
codebase/books/: admin.py  apps.py  models.py  tasks.py  translation.py  urls.py  views.py
codebase/chat/: admin.py  apps.py  consumers.py  models.py  urls.py  views.py
codebase/clients/: admin.py  apps.py  models.py  tasks.py  urls.py  views.py
codebase/content/: admin.py  apps.py  feeds.py  forms.py  listings.py  views.py
codebase/emails/: apps.py  tasks.py
codebase/faqs/: admin.py  apps.py  factories.py  models.py  translation.py  urls.py  views.py
codebase/geo/: admin.py  apps.py
codebase/home/: admin.py  apps.py  models.py  tasks.py  translation.py  urls.py  views.py
codebase/jobs/: apps.py  models.py
codebase/links/: admin.py  apps.py  models.py
codebase/menus/: admin.py  apps.py  models.py  translation.py
codebase/orders/: apps.py  views.py
codebase/pages/: admin.py  apps.py  models.py  tasks.py  urls.py
codebase/payments/: apps.py  tests.py  views.py
codebase/plans/: admin.py  apps.py  models.py  views.py
codebase/products/: apps.py  models.py
codebase/profiles/: apps.py  factories.py  tasks.py  tests.py  urls.py
codebase/search/: admin.py  apps.py  models.py  tasks.py  urls.py  views.py
codebase/sites/: admin.py  apps.py  management.py  managers.py  models.py  shortcuts.py  tasks.py  translation.py
codebase/tex/: apps.py  compile.py  environment.py  exceptions.py  extensions.py  models.py  urls.py
codebase/tools/: apps.py  models.py  tools.py  urls.py  views.py
codebase/users/: models.py
codebase/utils/: abstracts.py  abstracts_and_mixins.py  actions.py  admin_actions.py  constants.py  db_sync.py  exceptions.py  generic_views.py  http.py  mixins.py  tasks.py  telegram.py  translation.py
config/: settings.py  urls.py
data/: home.json  landing.json  quiz.json
one/: admin.py  asgi.py  bot.py  choices.py  db.py  gdp.py  settings.py  test.py  tmp.py  translation.py  urls.py  wsgi.py
one/_templates/: base.html  robots.txt
one/animations/: admin.py  apps.py  models.py
one/app_template/: apps.py-tpl
one/applications/: apps.py  models.py
one/articles/: admin.py  apps.py  factories.py  models.py  sitemaps.py  tasks.py  urls.py  views.py
one/auths/: admin.py  apps.py  linkedin.py  models.py  views.py
one/base/: __init__.py  admin.py  apps.py  checks.py  factories.py  forms.py  models.py  sitemaps.py  tasks.py  translation.py  urls.py  views.py
one/books/: admin.py  apps.py  models.py  tasks.py  views.py
one/candidates/: admin.py  apps.py  forms.py  models.py  tasks.py  translation.py  urls.py  views.py
one/chat/: apps.py  consumers.py  models.py  routing.py  urls.py
one/clients/: admin.py  apps.py  factories.py  models.py  tasks.py
one/companies/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
one/content/: apps.py  context_processors.py  models.py  sitemaps.py  tasks.py  texts.py  translation.py  urls.py
one/coverletters/: apps.py  models.py
one/dgt/: admin.py  apps.py  feeds.py  models.py  tasks.py  urls.py  views.py
one/emails/: admin.py  apps.py  models.py  tasks.py  urls.py  views.py
one/etsy/: admin.py  api.py  apps.py  enums.py  etsy_api.py  (+7 more)
pages/: apps.py  translation.py
shell/: add-submodule.sh  compilemessages.sh  create-app.sh  create-postgres-dev-db.sh  create_app.sh  deploy-full.sh  deploy.sh  fetch-submodules.sh  makemessages.sh  pip-compile-and-sync.sh  run-tests.sh  serve-htmlcov.sh
templates/: base.html
(+1600 files in other folders)
