[project]
name = "one"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "django",
  "django-auto-prefetch",
  "django-cleanup",
  "django-extensions",
  "django-rosetta",
  "django-o365mail",
  "django-modeltranslation",
  "django-money[exchange]",
  "django-upgrade",
  "django-markdownify",
  "django-storages",
  "django_htmx",
  "boto3",
  "psycopg",
  "pillow",
  "huey",
  "redis",
  "hiredis",
  "geoip2",
  "Werkzeug",
  "django-browser-reload",
  "docutils",
  "django-debug-toolbar",
  "deepl",
  "Jinja2",
  "qrcode[pil]",
  "Pygments",
  "stripe",
  "python-barcode[images]",
  "django-taggit",
  "gunicorn",
  "ipython",
  "coverage[toml]",
  "factory-boy",
  "black",
  "pyclean",
  "isort",
  "ruff",
  "djade",
  "djlint",
  "ipdb",
  "django-stubs[compatible-mypy]>=5.1.1",
  "django-fastdev>=1.12.0",
  "environs>=11.2.1",
  "django-allauth[socialaccount]>=65.3.0",
  "toml>=0.10.2",
]


[tool.ruff]
exclude = [".venv", "venv", "migrations", "submodules"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]

[tool.coverage.run]
branch = true
omit = ["manage.py"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "codebase.settings"

[allowed_hosts]
dev = ["127.0.0.1"]
stage = [
  "test1.ramiboutas.com",
  "test2.ramiboutas.com",
  "test1.nicecv.online",
  "test2.nicecv.online",
]
prod = [
  "ramiboutas.com",
  "www.ramiboutas.com",
  "englishstuff.online",
  "www.englishstuff.online",
  "nicecv.online",
  "www.nicecv.online",
]
