[project]
name = "one"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "django==5.1",
  "django-auto-prefetch>=1.12.0",
  "django-cleanup>=9.0.0",
  "django-extensions>=3.2.3",
  "django-rosetta>=0.10.1",
  "django-money[exchange]>=3.5.3",
  "django-upgrade>=1.23.1",
  "django-markdownify>=0.9.5",
  "django_htmx>=1.22.0",
  "boto3>=1.37.11",
  "psycopg>=3.2.5",
  "pillow>=11.1.0",
  "huey>=2.5.2",
  "redis>=5.2.1",
  "hiredis>=3.1.0",
  "geoip2>=5.0.1",
  "docutils>=0.21.2 ",                     # https://docs.djangoproject.com/en/5.1/ref/contrib/admin/admindocs/
  "deepl>=1.21.1",
  "Jinja2>=3.1.6",
  "qrcode[pil]>=8.0",
  "Pygments>=2.19.1",
  "python-barcode[images]>=0.15.1",
  "gunicorn>=23.0.0",
  "coverage[toml]>=7.6.12",
  "factory-boy>=3.3.3",
  "black>=25.1.0",
  "pyclean>=3.1.0",
  "isort>=6.0.1",
  "djade>=1.3.2",
  "ipython>=9.0.2",
  "ipdb>=0.13.13",
  "django-stubs[compatible-mypy]>=5.1.3",
  "environs>=14.1.1",
  "django-allauth[socialaccount]>=65.4.1",
  "pdf2image>=1.17.0",
  "django-dbbackup>=4.2.1",
  "django-modeltranslation>=0.19.11",
  "django-cors-headers>=4.6.0",
  "django-storages>=1.14.4",
  "whitenoise[brotli]>=6.8.2",
  "stripe>=11.4.1",
  "unittest-parametrize>=1.5.0",
  "django-nested-inline>=0.4.6",
  "bs4>=0.0.2",
  "etsyv3",
  "django-rest-framework>=0.1.0",
  "ruff>=0.9.5",
  "pre-commit>=4.1.0",
]


[tool.ruff]
exclude = [".venv", "venv", "migrations", "submodules"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["SIM105"]

[tool.coverage.run]
branch = true
omit = ["manage.py"]

[tool.django-stubs]
django_settings_module = "one.settings"

[tool.uv.sources]
etsyv3 = { git = "https://github.com/anitabyte/etsyv3" }
